@@ -1,7 +1,22 @@
 '''
-Created on Dec 23, 2011
+Created on Feb 1, 2014
 
-@author: ajju
+@author: ajdeveloped@gmail.com
+
+This file is part of XOZE. 
+
+XOZE is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
+
+XOZE is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with XOZE.  If not, see <http://www.gnu.org/licenses/>.
 '''
 from common.DataObjects import VideoHostingInfo, VideoInfo, VIDEO_QUAL_SD
 from common import HttpUtils
@@ -9,8 +24,8 @@ import re
 
 def getVideoHostingInfo():
     video_hosting_info = VideoHostingInfo()
-    video_hosting_info.set_video_hosting_image('http://www.novamov.com/images/logo_novamov.jpg')
-    video_hosting_info.set_video_hosting_name('Novamov')
+    video_hosting_info.set_video_hosting_image('http://www.nowvideo.ch/images/logo.png')
+    video_hosting_info.set_video_hosting_name('Nowvideo')
     return video_hosting_info
     
 def retrieveVideoInfo(video_id):
@@ -20,7 +35,7 @@ def retrieveVideoInfo(video_id):
     video_info.set_video_id(video_id)
     try:
         HttpUtils.HttpClient().enableCookies()
-        video_info_link = 'http://www.novamov.com/video/' + str(video_id)
+        video_info_link = 'http://www.nowvideo.ch/video/' + str(video_id)
         html = HttpUtils.HttpClient().getHtmlContent(url=video_info_link)
         if re.search(r'Video hosting is expensive. We need you to prove you\'re human.', html):
             html = HttpUtils.HttpClient().getHtmlContent(url=video_info_link)
@@ -44,4 +59,3 @@ def retrieveVideoInfo(video_id):
     except: 
         video_info.set_video_stopped(True)
     return video_info
-
